Reetan.Nayak Dev 25/force-app/main/default/objects/OAuth_Token__c/OAuth_Token__c.object-meta.xml
<CustomObject>
    <label>OAuth Token</label>
    <nameField>
        <label>OAuth Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuth Tokens</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>