Reetan.Nayak Dev 25/force-app/main/default/objects/OAuth_Token__c/fields/isAccess__c.field-meta.xml
<CustomField>
    <fullName>isAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this is an access token. If false, it&apos;s a request token</description>
    <inlineHelpText>If true, this is an access token. If false, it&apos;s a request token</inlineHelpText>
    <label>isAccess</label>
    <type>Checkbox</type>
</CustomField>