Reetan.Nayak Dev 25/force-app/main/default/objects/OAuth_Token__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OAuth_Tokens</relationshipName>
    <type>Lookup</type>
</CustomField>